# WebDifficultyEstimation

./: .gitignore  Makefile  pyproject.toml
scratch/: stats.csv
src/: compute_difficulty.py  n_gram_counter.py  scan_the_web.py
src/utils/: git.py  logger.py
