[tool.poetry]
name = "webdifficultyestimation"
version = "0.1.0"
description = "The Web Difficulty Estimation project involves continuously crawling the web to calculate word frequencies in a large dataset, using these statistics to determine the difficulty of words and word groups, implementing n-gram analysis, calculating text difficulty based on word frequency, and creating an interface to visualize results in real-time and test the algorithm with custom texts."
authors = ["Henri Jamet <henri.jamet@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
dash = "^2.17.1"
dash-mantine-components = "^0.14.4"
numpy = "^2.1.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
